tests/snapshots/sizes__grid_filter_80x24.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                          │
│  FROM users                                                                  │
│  WHERE plan = 'pro'                                                          │
│  ORDER BY created_at DESC;                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌ result · 3/6 row(s) (filtered) ──────────────────────────────────────────────┐
│id  email                  plan  created_at                                   │
│1   ada@example.com        pro   2026-01-04 09:12:00+00                       │
│3   grace@example.com      pro   2026-02-01 08:30:00+00                       │
│6   katherine@example.com  pro   2026-03-21 16:40:00+00                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   filter: /pro  · 3/6 row(s) · enter accept · esc clear
